--- a/IhalematikPro/IhalematikProUI.csproj
+++ b/IhalematikPro/IhalematikProUI.csproj
@@ -346,6 +346,7 @@
     <Compile Include="Model\OBFModel.cs" />
     <Compile Include="Model\PozModel.cs" />
     <Compile Include="Model\TitleModel.cs" />
+    <Compile Include="Model\UnitTimeTypesModel.cs" />
     <Compile Include="Model\VehicleModel.cs" />
     <Compile Include="Model\VehicleTitleModel.cs" />
     <Compile Include="Model\WorkerModel.cs" />
