--- a/IhalematikPro/IhalematikProUI.csproj
+++ b/IhalematikPro/IhalematikProUI.csproj
@@ -176,11 +176,11 @@
     <Compile Include="Forms\frm_AracTanimlama.Designer.cs">
       <DependentUpon>frm_AracTanimlama.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\frm_BelgeKontrol.cs">
+    <Compile Include="Forms\frm_ihaleOlustuMesaj.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\frm_BelgeKontrol.Designer.cs">
-      <DependentUpon>frm_BelgeKontrol.cs</DependentUpon>
+    <Compile Include="Forms\frm_ihaleOlustuMesaj.Designer.cs">
+      <DependentUpon>frm_ihaleOlustuMesaj.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\frm_CalisanEkle.cs">
       <SubType>Form</SubType>
@@ -361,8 +361,8 @@
     <EmbeddedResource Include="Forms\frm_AracTanimlama.resx">
       <DependentUpon>frm_AracTanimlama.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\frm_BelgeKontrol.resx">
-      <DependentUpon>frm_BelgeKontrol.cs</DependentUpon>
+    <EmbeddedResource Include="Forms\frm_ihaleOlustuMesaj.resx">
+      <DependentUpon>frm_ihaleOlustuMesaj.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\frm_CalisanEkle.resx">
       <DependentUpon>frm_CalisanEkle.cs</DependentUpon>
@@ -687,6 +687,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="pic\open-file-icon %281%29.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="pic\green_checkmark_clip_art.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="pic\logo_ihale.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
