--- a/IhalematikPro/IhalematikProUI.csproj
+++ b/IhalematikPro/IhalematikProUI.csproj
@@ -338,7 +338,7 @@
     <Compile Include="Forms\frm_YeniTeklifOlustur.Designer.cs">
       <DependentUpon>frm_YeniTeklifOlustur.cs</DependentUpon>
     </Compile>
-    <Compile Include="Manager\GlobalVeriablesManager.cs" />
+    <Compile Include="Manager\CurrentManager.cs" />
     <Compile Include="Manager\UIMaterialListManager.cs" />
     <Compile Include="Manager\UIOBFManager.cs" />
     <Compile Include="Manager\UIPozManager.cs" />
