KUZEN SON HALİ

--- a/IhalematikPro/IhalematikProUI.csproj
+++ b/IhalematikPro/IhalematikProUI.csproj
@@ -242,11 +242,11 @@
     <Compile Include="Forms\frm_FirmaTanimlama.Designer.cs">
       <DependentUpon>frm_FirmaTanimlama.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\frm_IscilikIslemKayit.cs">
+    <Compile Include="Forms\frm_IscilikAracDetay.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\frm_IscilikIslemKayit.Designer.cs">
-      <DependentUpon>frm_IscilikIslemKayit.cs</DependentUpon>
+    <Compile Include="Forms\frm_IscilikAracDetay.Designer.cs">
+      <DependentUpon>frm_IscilikAracDetay.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\frm_MalzemeFiyatTeklifiOlustur.cs">
       <SubType>Form</SubType>
@@ -416,8 +416,8 @@
     <EmbeddedResource Include="Forms\frm_FirmaTanimlama.resx">
       <DependentUpon>frm_FirmaTanimlama.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\frm_IscilikIslemKayit.resx">
-      <DependentUpon>frm_IscilikIslemKayit.cs</DependentUpon>
+    <EmbeddedResource Include="Forms\frm_IscilikAracDetay.resx">
+      <DependentUpon>frm_IscilikAracDetay.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\frm_MalzemeFiyatTeklifiOlustur.resx">
       <DependentUpon>frm_MalzemeFiyatTeklifiOlustur.cs</DependentUpon>
