--- a/IhalematikProBL/IhalematikProBL.csproj
+++ b/IhalematikProBL/IhalematikProBL.csproj
@@ -112,6 +112,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Entity\Company.cs" />
     <Compile Include="Entity\EntityBase.cs" />
     <Compile Include="Entity\Fare.cs" />
     <Compile Include="Entity\Material.cs" />
@@ -131,6 +132,7 @@
     <Compile Include="Manager\CustomDBConnectionManager.cs" />
     <Compile Include="Manager\TenderManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Provider\CompanyProvider.cs" />
     <Compile Include="Provider\CustomEntityBaseProvider.cs" />
     <Compile Include="Provider\MaterialListProvider.cs" />
     <Compile Include="Provider\OBFProvider.cs" />
