1. adimda poz listesine group eklendi

--- a/IhalematikPro/IhalematikProUI.csproj
+++ b/IhalematikPro/IhalematikProUI.csproj
@@ -437,6 +437,7 @@
     <Compile Include="Model\OBFModel.cs" />
     <Compile Include="Model\PozModel.cs" />
     <Compile Include="Model\ReportModel.cs" />
+    <Compile Include="Model\TenderGroupModel.cs" />
     <Compile Include="Model\TenderMaterialListEquipmentModel.cs" />
     <Compile Include="Model\TitleModel.cs" />
     <Compile Include="Model\UnitTimeTypes.cs" />
